Lab3: make proc_runner cross-platform (Windows CreateProcess + docs)

--- a/lab3/CMakeLists.txt
+++ b/lab3/CMakeLists.txt
@@ -1,17 +1,19 @@
-cmake_minimum_required(VERSION 3.16)
-project(lab3_proc_runner CXX)
+cmake_minimum_required(VERSION 3.10)
+project(proc_runner_lab3 LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+add_library(proc_runner STATIC)
 
-add_library(proc_runner
-    src/proc_runner_posix.cpp
-)
+if (WIN32)
+    target_sources(proc_runner PRIVATE src/proc_runner_win.cpp)
+else()
+    target_sources(proc_runner PRIVATE src/proc_runner_posix.cpp)
+endif()
+
 target_include_directories(proc_runner PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
-add_executable(proc_test
-    tests/proc_test.cpp
-)
+target_compile_features(proc_runner PUBLIC cxx_std_17)
+
+add_executable(proc_test tests/proc_test.cpp)
 target_link_libraries(proc_test PRIVATE proc_runner)
